Fix en overlapping de CSS para AJAX indicator

--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -6,8 +6,6 @@ body,html {
 
 .focusInput {
     background: #EAEBED;
-    position: relative;
-    z-index: 1;
     
 }
 
